fixed scrollbar in profile editing
do i qi rracen tailwindit

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
+@import "tailwindcss";
+
+@theme{
+  --tailwind-scrollbar-track: var[--bg-secondary];
+  --tailwind-scrollbar-thumb: var(--bg-primary);
+}
+
 html, body {
   background-color: #1C1D20;
   margin: 0;
